@@ -3,10 +3,10 @@ package us.dot.its.jpo.ode.api.services;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -47,9 +47,11 @@ import java.util.HashSet;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
@@ -518,7 +520,7 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList(1, 2));
+        patch.setOrganizations(Arrays.asList(1, 2));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
@@ -532,7 +534,11 @@ class RsuManagementServiceTest {
 
         rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        verify(rsuOrganizationRepository, times(2)).save(any(RsuOrganization.class));
+        ArgumentCaptor<List<RsuOrganization>> captor = ArgumentCaptor.forClass(List.class);
+        verify(rsuOrganizationRepository, times(1)).saveAll(captor.capture());
+        List<RsuOrganization> savedList = captor.getValue();
+        assertEquals(2, savedList.size(), "Expected saveAll to be called with a list of size 2");
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -541,20 +547,24 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList(1));
+        patch.setOrganizations(Arrays.asList(1));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
+        existingRsu.setRsuOrganizations(Set.of(new RsuOrganization() {
+            {
+                setRsu(existingRsu);
+                setOrganization(testOrg);
+            }
+        }));
 
         List<Organization> authorizedOrgs = Arrays.asList(testOrg);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuOrganizationRepository.save(any(RsuOrganization.class)))
-                .thenThrow(new DataIntegrityViolationException("Duplicate entry"));
 
-        assertThrows(DataIntegrityViolationException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs));
+        rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
+        verify(rsuOrganizationRepository, never()).saveAll(anyList());
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -563,7 +573,7 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList(9));
+        patch.setOrganizations(Arrays.asList(9));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
@@ -579,32 +589,8 @@ class RsuManagementServiceTest {
 
         assertTrue(
                 exception.getMessage().contains("Organization not found or user not authorized for: 9"));
-        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-    }
-
-    @Test
-    void testHandleOrganizationChanges_AddOrganizations_OrganizationNotFound() throws UnknownHostException {
-        String rsuIp = "192.168.1.100";
-        InetAddress inetAddress = InetAddress.getByName(rsuIp);
-
-        RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList(9));
-
-        Rsu existingRsu = new Rsu();
-        existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
-
-        List<Organization> authorizedOrgs = Arrays.asList();
-
-        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs));
-
-        assertTrue(
-                exception.getMessage().contains("Organization not found or user not authorized for: 9"));
-        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
+        verify(rsuOrganizationRepository, never()).saveAll(anyList());
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -613,11 +599,10 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(Arrays.asList(1, 2));
+        patch.setOrganizations(List.of());
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
 
         RsuOrganization rsuOrg1 = new RsuOrganization();
         rsuOrg1.setRsu(existingRsu);
@@ -627,20 +612,18 @@ class RsuManagementServiceTest {
         rsuOrg2.setRsu(existingRsu);
         rsuOrg2.setOrganization(testOrg2);
 
+        existingRsu.setRsuOrganizations(Set.of(rsuOrg1, rsuOrg2));
+
         List<Organization> authorizedOrgs = Arrays.asList(testOrg, testOrg2, testOrg3);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization(inetAddress, testOrg))
-                .thenReturn(Optional.of(rsuOrg1));
-        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization(inetAddress, testOrg2))
-                .thenReturn(Optional.of(rsuOrg2));
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
 
         rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        verify(rsuOrganizationRepository).delete(rsuOrg1);
-        verify(rsuOrganizationRepository).delete(rsuOrg2);
+        verify(rsuOrganizationRepository, never()).saveAll(anyList());
+        verify(rsuOrganizationRepository).deleteAll(List.of(rsuOrg1, rsuOrg2));
     }
 
     @Test
@@ -649,7 +632,7 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(Arrays.asList(1));
+        patch.setOrganizations(Arrays.asList(1));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
@@ -658,39 +641,12 @@ class RsuManagementServiceTest {
         List<Organization> authorizedOrgs = Arrays.asList(testOrg);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization(inetAddress, testOrg))
-                .thenReturn(Optional.empty());
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
 
         rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-    }
-
-    @Test
-    void testHandleOrganizationChanges_RemoveOrganizations_Unauthorized() throws UnknownHostException {
-        String rsuIp = "192.168.1.100";
-        InetAddress inetAddress = InetAddress.getByName(rsuIp);
-
-        RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(Arrays.asList(9));
-
-        Rsu existingRsu = new Rsu();
-        existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
-
-        List<Organization> authorizedOrgs = Arrays.asList(testOrg, testOrg2);
-
-        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs));
-
-        assertTrue(
-                exception.getMessage().contains("Organization not found or user not authorized for: 9"));
-        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -699,29 +655,30 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList(1));
-        patch.setOrganizationsToRemove(Arrays.asList(2));
+        patch.setOrganizations(List.of(testOrg.getId()));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
 
         RsuOrganization rsuOrgToRemove = new RsuOrganization();
         rsuOrgToRemove.setRsu(existingRsu);
         rsuOrgToRemove.setOrganization(testOrg2);
+
+        existingRsu.setRsuOrganizations(Set.of(rsuOrgToRemove));
 
         List<Organization> authorizedOrgs = Arrays.asList(testOrg, testOrg2);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
         when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
         when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-        when(rsuOrganizationRepository.findByRsuIpv4AddressAndOrganization(inetAddress, testOrg2))
-                .thenReturn(Optional.of(rsuOrgToRemove));
 
         rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        verify(rsuOrganizationRepository).save(any(RsuOrganization.class));
-        verify(rsuOrganizationRepository).delete(rsuOrgToRemove);
+        ArgumentCaptor<List<RsuOrganization>> captor = ArgumentCaptor.forClass(List.class);
+        verify(rsuOrganizationRepository, times(1)).saveAll(captor.capture());
+        List<RsuOrganization> savedList = captor.getValue();
+        assertEquals(1, savedList.size(), "Expected saveAll to be called with a list of size 1");
+        verify(rsuOrganizationRepository).deleteAll(List.of(rsuOrgToRemove));
     }
 
     @Test
@@ -730,7 +687,7 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(Arrays.asList(1, 8, 9));
+        patch.setOrganizations(List.of(1, 8, 9));
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
@@ -740,11 +697,12 @@ class RsuManagementServiceTest {
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
 
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
+        IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
                 () -> rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs));
+        assertTrue(ex.getMessage().contains("8"));
 
-        assertTrue(exception.getMessage().contains("8"));
+        verify(rsuOrganizationRepository, never()).saveAll(anyList());
+        verify(rsuOrganizationRepository, never()).deleteAll(anyList());
     }
 
     @Test
@@ -753,22 +711,33 @@ class RsuManagementServiceTest {
         InetAddress inetAddress = InetAddress.getByName(rsuIp);
 
         RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(Arrays.asList(1, 8, 9));
+        patch.setOrganizations(List.of());
 
         Rsu existingRsu = new Rsu();
         existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
+        existingRsu.setRsuOrganizations(Set.of(new RsuOrganization() {
+            {
+                setRsu(existingRsu);
+                setOrganization(testOrg);
+            }
+        },
+                new RsuOrganization() {
+                    {
+                        setRsu(existingRsu);
+                        setOrganization(testOrg2);
+                    }
+                }));
 
         List<Organization> authorizedOrgs = Arrays.asList(testOrg);
 
         when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
 
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs));
+        rsuManagementService.modifyRsu(rsuIp, patch, authorizedOrgs);
 
-        assertTrue(exception.getMessage().contains("8"));
-        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
+        ArgumentCaptor<List<RsuOrganization>> captor = ArgumentCaptor.forClass(List.class);
+        verify(rsuOrganizationRepository, times(1)).deleteAll(captor.capture());
+        List<RsuOrganization> deletedList = captor.getValue();
+        assertEquals(1, deletedList.size(), "Expected delete to be called with a list of size 1");
     }
 
     @Test
@@ -790,48 +759,6 @@ class RsuManagementServiceTest {
         rsuManagementService.modifyRsu(rsuIp, patch, List.of());
 
         verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-        verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
-    }
-
-    @Test
-    void testHandleOrganizationChanges_EmptyAddList() throws UnknownHostException {
-        String rsuIp = "192.168.1.100";
-        InetAddress inetAddress = InetAddress.getByName(rsuIp);
-
-        RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToAdd(List.of());
-
-        Rsu existingRsu = new Rsu();
-        existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
-
-        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-
-        rsuManagementService.modifyRsu(rsuIp, patch, List.of());
-
-        verify(rsuOrganizationRepository, never()).save(any(RsuOrganization.class));
-    }
-
-    @Test
-    void testHandleOrganizationChanges_EmptyRemoveList() throws UnknownHostException {
-        String rsuIp = "192.168.1.100";
-        InetAddress inetAddress = InetAddress.getByName(rsuIp);
-
-        RsuPatch patch = new RsuPatch();
-        patch.setOrganizationsToRemove(List.of());
-
-        Rsu existingRsu = new Rsu();
-        existingRsu.setIpv4Address(inetAddress);
-        existingRsu.setRsuOrganizations(new HashSet<>());
-
-        when(rsuRepository.findByIpv4Address(inetAddress)).thenReturn(existingRsu);
-        when(rsuRepository.save(existingRsu)).thenReturn(existingRsu);
-        when(rsuMapper.toDto(existingRsu)).thenReturn(null);
-
-        rsuManagementService.modifyRsu(rsuIp, patch, List.of());
-
         verify(rsuOrganizationRepository, never()).delete(any(RsuOrganization.class));
     }
 
